--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 app.name=Secure Architecture Lab
 app.description=${app.name} is a spring boot app to be deployed in the cloud
-fruitivice.url=http://www.fruityvice.com/api/fruit/all
+fruitivice.url=${FRUITYVICE_URL}
